[package]
name = "available-enis"
version = "0.2.0"
authors = ["Bruce Adams <bruce.adams@acm.org>"]
description = "Count and optionally delete available AWS Elastic Networks"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.79"
aws-config = "1.1.2"
aws-types = "1.1.2"
aws-sdk-ec2 = "1.14.0"
futures = "0.3.30"
tracing = "0.1.40"

[dependencies.clap]
features = ["derive", "wrap_help"]
version = "4.4.16"

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.18"
